--- a/day3/notebooks/Day3-Morning-Intro_to_Python_II.ipynb
+++ b/day3/notebooks/Day3-Morning-Intro_to_Python_II.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "[0, 5, 10, 15, 20, 25, 30, 35, 40, 45]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "[0, 10, 20, 30, 40]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,18 +145,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5//2+(5%2)/2 #integer division and modulo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 7, 13, 19, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "# examples of range(x,y,z)\n",
     "seq = [x for x in range(20)] #If you only provide range() with one integer, it defaults to starting at 0\n",
     "\n",
     "# use range to find every third number between 1 and 30\n",
-    "??\n",
+    "z=range(1,30,3)\n",
+    "#print(list(z))\n",
     "\n",
     "# use list comprehension to find the odd elements within that set\n",
-    "??"
+    "oddy=[num for num in range(1,30,3) if num%2 == 1] #returns only values that are even\n",
+    "#print(oddy)\n",
+    "\n",
+    "newoddy=[]\n",
+    "\n",
+    "for i in range(1,30,3):\n",
+    "    if i%2 == 1:\n",
+    "        newoddy.append(i)\n",
+    "\n",
+    "print(newoddy)\n",
+    "\n"
    ]
   },
   {
@@ -168,9 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is one loop\n",
+      "('Luke', 'BME', 'student')\n",
+      "this is one loop\n",
+      "('Sheridan', 'Neuroscience', 'student')\n",
+      "this is one loop\n",
+      "('Loyal', 'Neuroscience', 'professor')\n",
+      "this is one loop\n",
+      "('Winston', 'BME', 'professor')\n"
+     ]
+    }
+   ],
    "source": [
     "Folks = [\n",
     "(\"Luke\", \"BME\", \"student\"),\n",
@@ -182,7 +236,20 @@
     "[x[1] for x in Folks] ## access the second element in each tuple\n",
     "\n",
     "## Use list comprehension and fstring formating to write a descriptive sentence about each person using the info above and print it to the output cell.\n",
-    "??\n",
+    "#person=Folks[0]\n",
+    "#print(person)\n",
+    "#descriptor=f\"{Folks[0][0]} is a {Folks[0][2]} in the {Folks[0][1]} department.\"\n",
+    "#print(descriptor)\n",
+    "\n",
+    "for var1 in Folks:\n",
+    "    print(\"this is one loop\")\n",
+    "    print(var1)\n",
+    "#    descriptor=f\"{person[0]} is a {person[2]} in the {person[1]} department.\"\n",
+    "#    print(descriptor)\n",
+    "\n",
+    "\n",
+    "#alldescriptions=[f\"{blah[0]} is a {blah[2]} in the {blah[1]} department.\") for blah in Folks\n",
+    "#print(alldescriptions)\n",
     "\n"
    ]
   },
@@ -196,22 +263,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of dna: 51\n",
+      "Number of Gs: 13\n",
+      "Number of Cs: 12\n",
+      "49.01960784313725\n"
+     ]
+    }
+   ],
    "source": [
     "dna = 'ATTAGCGTATTCGAGCTATCGATCTAGCGAGCTAGCTATCAGCGACGTACG'\n",
     "\n",
     "dnaLength = len(dna)\n",
     "print(f'Length of dna: {dnaLength}')\n",
     "\n",
-    "nG = 0\n",
+    "nG = dna.count('G')\n",
     "print(f'Number of Gs: {nG}')\n",
     "\n",
-    "nC = 0\n",
+    "nC = dna.count('C')\n",
     "print(f'Number of Cs: {nC}')\n",
     "\n",
-    "nGC = 0\n",
+    "nGC = nG + nC\n",
     "\n",
     "GC_content = (nGC/dnaLength)*100\n",
     "print(GC_content)"
@@ -234,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getGC(seq):\n",
     "    dnaLength = len(seq)\n",
-    "    nG = 0\n",
-    "    nC = 0\n",
-    "    nGC = 0\n",
+    "    nG = seq.count('G')\n",
+    "    nC = seq.count('C')\n",
+    "    nGC = nG+nC\n",
     "    GC_content = (nGC/dnaLength)*100\n",
     "    return(GC_content)"
    ]
@@ -258,10 +336,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49.01960784313725\n"
+     ]
+    }
+   ],
    "source": [
+    "dna = 'ATTAGCGTATTCGAGCTATCGATCTAGCGAGCTAGCTATCAGCGACGTACG'\n",
+    "\n",
+    "\n",
     "gc = getGC(dna)\n",
     "print(gc)"
    ]
@@ -275,9 +364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[46.42857142857143, 42.42424242424242, 52.77777777777778, 55.55555555555556]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "myDNASet = [\n",
@@ -287,7 +384,15 @@
     "            'GTATCGGATCTAGCGGCGGCATTATCG'\n",
     "           ] # this is a list of strings, each containing a DNA sequence.\n",
     "\n",
-    "for ...\n"
+    "gclist=[]\n",
+    "\n",
+    "for individualDNA in myDNASet:\n",
+    "    gclist.append(getGC(individualDNA))\n",
+    "\n",
+    "print(gclist) \n",
+    "\n",
+    "#allthegcs=[getGC(individualDNA) for individualDNA in myDNASet] #list comprehension version\n",
+    "#print(allthegcs)\n"
    ]
   },
   {
@@ -306,9 +411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def checkDNA(seq, query='AGC'): #checks to see if the DNA sequence has a specific substring\n",
     "    return(query in seq)\n",
@@ -357,14 +473,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def tm_fun(seq):\n",
+    "    nA = seq.count('A')\n",
+    "    nC = seq.count('C')\n",
+    "    nG = seq.count('G')\n",
+    "    nT = seq.count('T')\n",
+    "    if len(seq) < 14:\n",
+    "         #short formula for tm\n",
+    "        tm = (nA + nT)*2 + (nG + nC)*4\n",
+    "    else:\n",
+    "        #long formula for tm\n",
+    "        tm = 64.9 + 41*(nG+nC-16.4)/(nA+nT+nG+nC)\n",
+    "   \n",
+    "    return(tm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACTGATGCTAGCTGACTGATCTAGCTGA\n",
+      "59.92142857142858\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
     "# Define and use your function below. Test your function by looping through the sequences in the file 'test.fa'\n",
+    "## FIX THE COMMENT ABOUT TEST.FA\n",
     "\n",
+    "myDNASet = [\n",
+    "            'ACTGATGCTAGCTGACTGATCTAGCTGA',\n",
+    "            'TGCATTTTCGAGCTATCGAGCATTCTACGTACT',\n",
+    "            'CACTATCTACGGATCGGAGCGGATTCGTAGCTATGC',\n",
+    "            'GTATCGGATCTAGCGGCGGCATTATCG'\n",
+    "           ]\n",
     "\n",
+    "myfavdna=myDNASet[0]\n",
     "\n",
+    "print(myfavdna)\n",
+    "\n",
+    "len(myfavdna)\n",
+    "\n",
+    "print(tm_fun(myfavdna))\n",
+    "\n",
+    "mydna=\"ACTGATGCTA\"\n",
+    "\n",
+    "print(tm_fun(mydna))\n",
     "\n"
    ]
   },
@@ -382,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +571,7 @@
        "5.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +592,7 @@
        "0.9912028118634736"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +612,7 @@
        "15511210043330985984000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +646,7 @@
        "1.3979400086720377"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,15 +672,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today is 2024-08-18\n",
-      "Tomorrow is 2024-08-19\n"
+      "Today is 2024-08-28\n",
+      "Tomorrow is 2024-08-29\n"
      ]
     }
    ],
@@ -546,15 +710,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/timp/bcmb_bootcamp/day3/notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path\n",
     "\n",
     "## import the 'os' module and print your current working directory with the getcwd() function\n",
-    "??"
+    "import os\n",
+    "print(os.getcwd())"
    ]
   },
   {
@@ -567,10 +740,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def volume(radius):\n",
+    "    myvol=(4/3)*math.pi*radius**3\n",
+    "    return(myvol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4188790.2047863905"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.pi)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1282,9 @@
     "\n",
     "while i < nLines:\n",
     "    print(next(file))\n",
-    "    i += 1"
+    "    i += 1\n",
+    "\n",
+    "file.close()"
    ]
   },
   {
@@ -1080,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1304,7 @@
      "output_type": "stream",
      "text": [
       "b'>chrIII\\n'\n",
-      "[b'CCCACACACCACACCCACACCACACCCACACACCACACACACCACACCCA\\n', b'CACACCCACACCACACCACACCCACACCACACCCACACACCCACACCCAC\\n', b'ACACCACACCCACACACACCACACCCACACACACCCACACCCACACACCA\\n', b'CACCCACACACACACCACACCCACACACACCACACCACACCCACACCACA\\n', b'CCCACACCCACACACCACACCCACACCCACACCCCACACCCACACACCAC\\n', b'ACCCACACACACCACACCCACACACACCCACACCACACCCACACACCACA\\n', b'CCCACACACCCACACCCACACACACCACACCCACACCACACCCACACCCA\\n', b'CACACCCACACCCTAACACTACCCTAACACTACCCTATTCTAACCCTGAT\\n', b'TTTACCTGTCTCCCAACTTACTCTCCATTACCCTACCTCTCCACTCGTTA\\n', b'CCCTGTCTCATTCAACCGTACCACTCCCAACCACCATCCATCTCTCTACT\\n']\n"
+      "['CCCACACACCACACCCACACCACACCCACACACCACACACACCACACCCA', 'CACACCCACACCACACCACACCCACACCACACCCACACACCCACACCCAC', 'ACACCACACCCACACACACCACACCCACACACACCCACACCCACACACCA', 'CACCCACACACACACCACACCCACACACACCACACCACACCCACACCACA', 'CCCACACCCACACACCACACCCACACCCACACCCCACACCCACACACCAC', 'ACCCACACACACCACACCCACACACACCCACACCACACCCACACACCACA', 'CCCACACACCCACACCCACACACACCACACCCACACCACACCCACACCCA', 'CACACCCACACCCTAACACTACCCTAACACTACCCTATTCTAACCCTGAT', 'TTTACCTGTCTCCCAACTTACTCTCCATTACCCTACCTCTCCACTCGTTA', 'CCCTGTCTCATTCAACCGTACCACTCCCAACCACCATCCATCTCTCTACT']\n"
      ]
     }
    ],
@@ -1107,13 +1323,15 @@
     "\n",
     "numLines = 10\n",
     "\n",
-    "head = [next(chrIII) for x in range(numLines)] # Using list comprehension to return a list of values from some operation\n",
+    "head = [next(chrIII).decode().strip() for x in range(numLines)] # Using list comprehension to return a list of values from some operation\n",
     "\n",
     "print(head)\n",
     "\n",
     "# .decode() to convert byte-string (b'') to a string ('')\n",
     "\n",
-    "# .strip() to remove the newline character ('\\n') from the end of each line\n"
+    "# .strip() to remove the newline character ('\\n') from the end of each line\n",
+    "\n",
+    "chrIII.close()"
    ]
   },
   {
@@ -1126,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1134,21 +1352,13 @@
      "output_type": "stream",
      "text": [
       "Here is my awesome file content!\n",
-      "\n",
       "It's probably the most important information I'll need for my thesis!\n",
-      "\n",
       "Gapdh\n",
-      "\n",
       "Mef2c\n",
-      "\n",
       "Pax6\n",
-      "\n",
       "Cxcl1\n",
-      "\n",
       "Msi1\n",
-      "\n",
-      "I forgot to add this as well\n",
-      "\n"
+      "I forgot to add this as well\n"
      ]
     }
    ],
@@ -1169,7 +1379,7 @@
     "file = open('myOutput.txt','r')\n",
     "\n",
     "for line in file:\n",
-    "    print(line)\n"
+    "    print(line.strip())\n"
    ]
   },
   {
@@ -1266,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,10 +1510,52 @@
     "    protein = \"\"\n",
     "    for start in range(0,last_codon_start,3):\n",
     "        codon = dna[start:start+3]\n",
+    "        print(codon)\n",
     "        aa = lookup_AA(codon)\n",
     "        protein = protein + aa\n",
     "    return(protein)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATG\n",
+      "ATG\n",
+      "ATG\n",
+      "ATG\n",
+      "ATG\n",
+      "ATG\n",
+      "ATG\n",
+      "ATG\n",
+      "ATG\n",
+      "ATG\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'MMMMMMMMMM'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_dna('ATGATGATGATGATGATGATGATGATGATG')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1359,7 +1611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
