--- a/day3/assignments/day3_lunch_exercise_studentcopy.ipynb
+++ b/day3/assignments/day3_lunch_exercise_studentcopy.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_origin=pd.read_csv('/Users/timp/bcmb_bootcamp/day3/data/Brauer2008_DataSet1_clean.tds', sep='\\t')"
+    "data_origin=pd.read_csv('../data/Brauer2008_DataSet1_clean.tds', sep='\\t')"
    ]
   },
   {
@@ -2691,7 +2691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
