--- a/day3/notebooks/Day3_Afternoon_tidying.ipynb
+++ b/day3/notebooks/Day3_Afternoon_tidying.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "[7240 rows x 60 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "[7240 rows x 58 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
        "[405440 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
        "Name: variable, Length: 405440, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
        "[405440 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
        "[405440 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
        "[405440 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
        "Name: sex_age, Length: 405440, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1774,7 @@
        "[405440 rows x 9 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1980,7 @@
        "[405440 rows x 7 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,16 +2035,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         False\n",
+       "1         False\n",
+       "2         False\n",
+       "3         False\n",
+       "4         False\n",
+       "          ...  \n",
+       "405435    False\n",
+       "405436    False\n",
+       "405437    False\n",
+       "405438    False\n",
+       "405439    False\n",
+       "Name: year, Length: 405440, dtype: bool"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x=tb['year']==2000"
+    "x=tb['year']==2000\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2233,7 @@
        "[11872 rows x 7 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2221,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2410,7 @@
        "[11872 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2595,7 @@
        "[2329 rows x 7 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2591,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2780,7 @@
        "[1334 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2780,7 +2803,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "Afghanistan        1131.0\n",
+       "Albania             105.0\n",
+       "Algeria            3214.0\n",
+       "American Samoa        3.0\n",
+       "Andorra               0.0\n",
+       "                   ...   \n",
+       "Uzbekistan         1900.0\n",
+       "Vanuatu              32.0\n",
+       "Viet Nam          40886.0\n",
+       "Yemen              2390.0\n",
+       "Zambia             5593.0\n",
+       "Name: value, Length: 168, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped=oldtwothousand.groupby(by=['country']) ['value']\n",
+    "percountry_old2000=grouped.sum()\n",
+    "percountry_old2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2910,47 +2967,12 @@
        "94208  Algeria  2000  312.0     new   sp   f    65+"
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "oldtwothousand[oldtwothousand['country']=='Algeria']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "country\n",
-       "Afghanistan        1131.0\n",
-       "Albania             105.0\n",
-       "Algeria            3214.0\n",
-       "American Samoa        3.0\n",
-       "Andorra               0.0\n",
-       "                   ...   \n",
-       "Uzbekistan         1900.0\n",
-       "Vanuatu              32.0\n",
-       "Viet Nam          40886.0\n",
-       "Yemen              2390.0\n",
-       "Zambia             5593.0\n",
-       "Name: value, Length: 168, dtype: float64"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped=oldtwothousand.groupby(by=['country']) ['value']\n",
-    "percountry_old2000=grouped.sum()\n",
-    "percountry_old2000"
    ]
   },
   {
@@ -2962,7 +2984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2971,7 +2993,7 @@
        "np.float64(407.0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3038,7 +3060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3073,50 +3095,50 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>941</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>301.0</td>\n",
        "      <td>new</td>\n",
        "      <td>sp</td>\n",
        "      <td>m</td>\n",
        "      <td>0-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>942</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1894.0</td>\n",
        "      <td>new</td>\n",
        "      <td>sp</td>\n",
        "      <td>m</td>\n",
        "      <td>0-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>943</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>468.0</td>\n",
        "      <td>new</td>\n",
        "      <td>sp</td>\n",
        "      <td>m</td>\n",
        "      <td>0-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>American Samoa</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>944</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>344.0</td>\n",
        "      <td>new</td>\n",
        "      <td>sp</td>\n",
        "      <td>m</td>\n",
        "      <td>0-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>945</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>382.0</td>\n",
        "      <td>new</td>\n",
        "      <td>sp</td>\n",
        "      <td>m</td>\n",
@@ -3133,50 +3155,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>405285</th>\n",
-       "      <td>Wallis and Futuna Islands</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>370195</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>5673.0</td>\n",
        "      <td>new</td>\n",
        "      <td>rel</td>\n",
        "      <td>f</td>\n",
-       "      <td>65+</td>\n",
+       "      <td>25-34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>405319</th>\n",
-       "      <td>West Bank and Gaza Strip</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>377435</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>4547.0</td>\n",
        "      <td>new</td>\n",
        "      <td>rel</td>\n",
        "      <td>f</td>\n",
-       "      <td>65+</td>\n",
+       "      <td>35-44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>405353</th>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>384675</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>3868.0</td>\n",
        "      <td>new</td>\n",
        "      <td>rel</td>\n",
        "      <td>f</td>\n",
-       "      <td>65+</td>\n",
+       "      <td>45-54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>405387</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>391915</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2672.0</td>\n",
        "      <td>new</td>\n",
        "      <td>rel</td>\n",
        "      <td>f</td>\n",
-       "      <td>65+</td>\n",
+       "      <td>55-64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>405421</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>399155</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2580.0</td>\n",
        "      <td>new</td>\n",
        "      <td>rel</td>\n",
        "      <td>f</td>\n",
@@ -3184,77 +3206,114 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11872 rows × 7 columns</p>\n",
+       "<p>406 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          country  year  value new_old type sex   age\n",
-       "15                    Afghanistan  1995    NaN     new   sp   m  0-14\n",
-       "49                        Albania  1995    0.0     new   sp   m  0-14\n",
-       "83                        Algeria  1995    NaN     new   sp   m  0-14\n",
-       "117                American Samoa  1995    NaN     new   sp   m  0-14\n",
-       "151                       Andorra  1995    NaN     new   sp   m  0-14\n",
-       "...                           ...   ...    ...     ...  ...  ..   ...\n",
-       "405285  Wallis and Futuna Islands  1995    NaN     new  rel   f   65+\n",
-       "405319   West Bank and Gaza Strip  1995    NaN     new  rel   f   65+\n",
-       "405353                      Yemen  1995    NaN     new  rel   f   65+\n",
-       "405387                     Zambia  1995    NaN     new  rel   f   65+\n",
-       "405421                   Zimbabwe  1995    NaN     new  rel   f   65+\n",
+       "       country  year   value new_old type sex    age\n",
+       "941     Brazil  1999   301.0     new   sp   m   0-14\n",
+       "942     Brazil  2000  1894.0     new   sp   m   0-14\n",
+       "943     Brazil  2001   468.0     new   sp   m   0-14\n",
+       "944     Brazil  2002   344.0     new   sp   m   0-14\n",
+       "945     Brazil  2003   382.0     new   sp   m   0-14\n",
+       "...        ...   ...     ...     ...  ...  ..    ...\n",
+       "370195  Brazil  2013  5673.0     new  rel   f  25-34\n",
+       "377435  Brazil  2013  4547.0     new  rel   f  35-44\n",
+       "384675  Brazil  2013  3868.0     new  rel   f  45-54\n",
+       "391915  Brazil  2013  2672.0     new  rel   f  55-64\n",
+       "399155  Brazil  2013  2580.0     new  rel   f    65+\n",
        "\n",
-       "[11872 rows x 7 columns]"
+       "[406 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ninetyfive=tb[tb['year']==1995]\n",
-    "ninetyfive\n"
+    "brazil=tb[tb['country']=='Brazil']\n",
+    "brazil=brazil.dropna()\n",
+    "brazil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country  age    sex\n",
+       "Brazil   0-14   f       501.275862\n",
+       "                m       521.068966\n",
+       "         15-24  f      2258.620690\n",
+       "                m      3277.724138\n",
+       "         25-34  f      2602.172414\n",
+       "                m      4612.896552\n",
+       "         35-44  f      1963.896552\n",
+       "                m      4315.034483\n",
+       "         45-54  f      1475.931034\n",
+       "                m      3677.758621\n",
+       "         55-64  f       935.620690\n",
+       "                m      2179.689655\n",
+       "         65+    f       931.965517\n",
+       "                m      1734.448276\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brazilgroup=brazil.groupby(by=['country','age','sex'])['value']\n",
+    "brazilgroup.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "country  age  \n",
-       "Brazil   0-14     1876.5\n",
-       "         15-24    6993.5\n",
-       "         25-34    9391.5\n",
-       "         35-44    8650.5\n",
-       "         45-54    6102.5\n",
-       "         55-64    3734.5\n",
-       "         65+      3495.0\n",
-       "Chile    0-14        8.0\n",
-       "         15-24      73.5\n",
-       "         25-34     128.0\n",
-       "         35-44     134.0\n",
-       "         45-54     102.0\n",
-       "         55-64      95.0\n",
-       "         65+       104.5\n",
-       "Peru     0-14      592.5\n",
-       "         15-24    4488.0\n",
-       "         25-34    2673.5\n",
-       "         35-44    1351.0\n",
-       "         45-54     825.0\n",
-       "         55-64     650.0\n",
-       "         65+       710.0\n",
+       "Brazil   0-14      511.172414\n",
+       "         15-24    2768.172414\n",
+       "         25-34    3607.534483\n",
+       "         35-44    3139.465517\n",
+       "         45-54    2576.844828\n",
+       "         55-64    1557.655172\n",
+       "         65+      1333.206897\n",
+       "Chile    0-14        9.187500\n",
+       "         15-24      58.921875\n",
+       "         25-34      88.765625\n",
+       "         35-44      90.593750\n",
+       "         45-54      87.843750\n",
+       "         55-64      71.906250\n",
+       "         65+        93.453125\n",
+       "Peru     0-14      347.088235\n",
+       "         15-24    2905.970588\n",
+       "         25-34    1808.794118\n",
+       "         35-44    1017.205882\n",
+       "         45-54     666.882353\n",
+       "         55-64     464.441176\n",
+       "         65+       522.000000\n",
        "Name: value, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twothousand1=twothousand[twothousand['country'].isin(['Brazil', 'Chile', 'Peru'])]\n",
-    "twothousand1.groupby(by=['country', 'age'])['value'].mean()"
+    "countrystuff=tb[tb['country'].isin(['Brazil', 'Chile', 'Peru'])]\n",
+    "countrystuff.groupby(by=['country', 'age'])['value'].mean()"
    ]
   },
   {
@@ -3495,7 +3554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
