--- a/day3/notebooks/Day3_LateAfternoon_plotting.ipynb
+++ b/day3/notebooks/Day3_LateAfternoon_plotting.ipynb
@@ -37,17 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline"
    ]
@@ -65,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +94,7 @@
        "       5.77027222, 5.89850049, 6.02672876, 6.15495704, 6.28318531])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +134,7 @@
        "       -1.27877162e-01, -2.44929360e-16])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +164,7 @@
        "        0.8713187 ,  0.92691676,  0.96729486,  0.99179001,  1.        ])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faf223fc440>]"
+       "[<matplotlib.lines.Line2D at 0x78ad6755d9f0>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -229,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faf19b2f6e0>]"
+       "[<matplotlib.lines.Line2D at 0x78ad661e9930>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -270,16 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faf19bb2390>]"
+       "[<matplotlib.lines.Line2D at 0x78ad4c3477c0>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -314,7 +306,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faf21c7e7e0>]"
+       "[<matplotlib.lines.Line2D at 0x78ad339defb0>]"
       ]
      },
      "execution_count": 12,
@@ -392,11 +384,11 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x7faf21d45580>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf21d10680>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf21d29610>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf19a4e3c0>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf19a4ec60>],\n",
+       "([<matplotlib.axis.XTick at 0x78ad2afd0f70>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2afd0f40>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2afd0790>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2aff5690>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2aff6140>],\n",
        " [Text(0.0, 0, '0.000'),\n",
        "  Text(1.5707963267948966, 0, '1.571'),\n",
        "  Text(3.141592653589793, 0, '3.142'),\n",
@@ -434,17 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x7faf1995e690>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf1995f320>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf19b2f200>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf19a18410>,\n",
-       "  <matplotlib.axis.XTick at 0x7faf19a18d40>],\n",
+       "([<matplotlib.axis.XTick at 0x78ad2af65f00>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2af65f30>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2af65720>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2af4cca0>,\n",
+       "  <matplotlib.axis.XTick at 0x78ad2af4ce50>],\n",
        " [Text(0.0, 0, '0'),\n",
        "  Text(1.5707963267948966, 0, '$\\\\pi$/2'),\n",
        "  Text(3.141592653589793, 0, '$\\\\pi$'),\n",
@@ -452,7 +444,7 @@
        "  Text(6.283185307179586, 0, '2$\\\\pi$')])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -482,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +483,7 @@
        "Text(0.5, 1.0, 'My Trigonometry Plot')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -524,16 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7faf21cab2f0>"
+       "<matplotlib.legend.Legend at 0x78ad4c3b1300>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -567,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -599,6 +591,13 @@
     "### Exercise: \n",
     "From what you have learned, plot sin^2, cos^2 and sin^2+cos^2.  As a tip, look at numpy.square to square the values (<https://numpy.org/doc/stable/reference/generated/numpy.square.html>)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -743,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
