changes from day 1-day2 morning

--- a/day2/notebooks/Day2-Morning_git.ipynb
+++ b/day2/notebooks/Day2-Morning_git.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To create an SSH key for GitHub use, follow these steps ON YOUR LOCAL COMPUTER (not on the server/VSCode):\n",
+    "To create an SSH key for GitHub use, follow these steps:\n",
     "\n",
     "1. Open a terminal or command prompt.\n",
     "2. Generate a new SSH key by running the following command:\n",
