ch-ch-change on Day2

--- a/day2/notebooks/Day2-Morning_git.ipynb
+++ b/day2/notebooks/Day2-Morning_git.ipynb
@@ -355,6 +355,10 @@
     "12. Click on the checkmark icon to commit your changes.\n",
     "\n",
     "Pause here - I'll make some edits when everyone is caught up, then you can try to merge them:\n",
+    "\n",
+    "Making lots of changes, ch-ch-ch-changes.\n",
+    "\n",
+    "\n",
     "1. To merge new changes from the main branch into your branch, switch back to the main branch by selecting it from the branch dropdown menu.\n",
     "2. Click on the ellipsis (...) icon in the Source Control view and select \"Pull\".\n",
     "3. VSCode will fetch the latest changes from the remote repository and merge them into your main branch.\n",
