--- a/day2/assignments/Day2-Homework_Python.ipynb
+++ b/day2/assignments/Day2-Homework_Python.ipynb
@@ -18,10 +18,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x=5\n",
+    "y=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x less than y\n"
+     ]
+    }
+   ],
+   "source": [
+    "if x > y:\n",
+    "    print(\"x is greater than y\")\n",
+    "elif x==y:\n",
+    "    print(\"equal\")\n",
+    "else:\n",
+    "    print(\"x less than y\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,10 +63,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "aboutme=dict(\n",
+    "    fname=\"Winston\",\n",
+    "    ugrad=\"UIUC\",\n",
+    "    grad=\"vi\",\n",
+    "    favoritemod=\"mouse\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fname': 'Winston', 'ugrad': 'UIUC', 'grad': 'vi', 'favoritemod': 'mouse'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(aboutme)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['fname', 'ugrad', 'grad', 'favoritemod'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aboutme.keys()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,16 +121,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aboutme['favoritemod']=aboutme['favoritemod'].capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "newstring=f\"{aboutme['favoritemod']} is my favorite model organism.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mouse is my favorite model organism\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(newstring)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Update your dictionary to include a new k:v pair with the name of your favorite gene."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aboutme['favgene']=\"GAPDH\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fname': 'Winston',\n",
+       " 'ugrad': 'UIUC',\n",
+       " 'grad': 'vi',\n",
+       " 'favoritemod': 'Mouse',\n",
+       " 'favgene': 'GAPDH'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aboutme"
    ]
   },
   {
@@ -90,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +228,105 @@
     "B = [\"Mathematics\",\"Physics\",\"Biostatistics\",\"Biochemistry\",\"Ethics\"]\n",
     "\n",
     "## your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Aset=set(A)\n",
+    "Bset=set(B)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Ethics', 'Mathematics', 'Physics'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bset - Aset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Biochemistry\n",
+      "Biostatistics\n"
+     ]
+    }
+   ],
+   "source": [
+    "for myA in A:\n",
+    "    if myA in B:\n",
+    "        print(myA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mathematics\n",
+      "Physics\n",
+      "Ethics\n"
+     ]
+    }
+   ],
+   "source": [
+    "for myB in B:\n",
+    "    if myB not in A:\n",
+    "        print(myB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Biochemistry\n",
+      "Molecular Biology\n",
+      "Genetics\n",
+      "Biostatistics\n",
+      "Histopathology\n",
+      "Mathematics\n",
+      "Physics\n",
+      "Ethics\n"
+     ]
+    }
+   ],
+   "source": [
+    "for myA in A:\n",
+    "    print(myA)\n",
+    "for myB in B:\n",
+    "    if myB not in A:\n",
+    "        print(myB)"
    ]
   },
   {
@@ -113,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +351,87 @@
     "repeat_count = 0\n",
     "previous_chararacter = ''\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "numL=0\n",
+    "for aa in gfp_100:\n",
+    "    if aa == \"L\":\n",
+    "        numL+=1\n",
+    "print(numL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repeat_count=0\n",
+    "prevchar=''\n",
+    "\n",
+    "for aa in gfp_100:\n",
+    "    if aa == prevchar:\n",
+    "        repeat_count+=1\n",
+    "    prevchar=aa\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gfp_100.count(\"L\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gfp_100.count(\"EE\")"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f830f5482817da8c94e7b92359ddd59f62b3b721ee2e7f2ba7b076c4827b6548"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
